web115/m3b_console-code_play.txt
<<<<<<< Updated upstream
5 * 2 
10
5 / 15 
0.3333333333333333
15.0 / 5
3
5 < 6
true
6 > 10
false
var a;
undefined
a = 5 * (200 - 3);
985
a + 15
1000
4^5
1
a + ' cars in the lot'
'985 cars in the lot'
if (a < 1000) {
    'Try again" }
VM401:2 Uncaught SyntaxError: Invalid or unexpected token
a < 1000 ? : 'Trya again';
VM491:1 Uncaught SyntaxError: Unexpected token ':'
if (a < 1000) {'Try again'}
'Try again'
if (a < 1000) {'Try again'} else {'Add more'}
'Try again'
a + 200
1185
if (a < 1000) {'Try again'} else {'Add more'}
'Try again'
a = a + 200
1185
if (a < 1000) {'Try again'} else {'Add more'}
'Add more'
a
1185
const a;
VM879:1 Uncaught SyntaxError: Missing initializer in const declaration
const a = 25;
VM912:1 Uncaught SyntaxError: Identifier 'a' has already been declared
const b = 25;
undefined
const b=25;
undefined
var b;
VM1035:1 Uncaught SyntaxError: Identifier 'b' has already been declared
    at <anonymous>:1:1
(anonymous) @ VM1035:1
b + b 
50
b = 2
VM1074:1 Uncaught TypeError: Assignment to constant variable.
    at <anonymous>:1:3
(anonymous) @ VM1074:1
'Can i get ${b} cars in the garage'
'Can i get ${b} cars in the garage'
alert(b)
undefined
`Can I get ${b} cars in the garage`
'Can I get 25 cars in the garage'
alert(`Can I get ${b} cars in the garage`)

undefined
Math.PI 
3.141592653589793
Math.PI * b
78.53981633974483
a + b
1210
Math.random(a)
0.7388020619341369
Math.floor(Math.random(a))
0
Math.random(a) + b
25.251824037373606
typeof a
'number'
const c = 'Quentin'
undefined
`${c} has ${b} cars at home`
'Quentin has 25 cars at home'
if (c) { true }
true
math.sqrt(a)
VM1884:1 Uncaught ReferenceError: math is not defined
    at <anonymous>:1:1
(anonymous) @ VM1884:1
Math.sqrt(a)
34.42382895611701
a = Math.sqrt(b)
5
a++
5
a = a++
6
const d = new Date();const d = new Date();
VM2032:1 Uncaught SyntaxError: Identifier 'd' has already been declared
d 
VM2077:1 Uncaught ReferenceError: d is not defined
    at <anonymous>:1:1
(anonymous) @ VM2077:1
const d = new Date();
undefined
d 
=======
5 * 2 
10
5 / 15 
0.3333333333333333
15.0 / 5
3
5 < 6
true
6 > 10
false
var a;
undefined
a = 5 * (200 - 3);
985
a + 15
1000
4^5
1
a + ' cars in the lot'
'985 cars in the lot'
if (a < 1000) {
    'Try again" }
VM401:2 Uncaught SyntaxError: Invalid or unexpected token
a < 1000 ? : 'Trya again';
VM491:1 Uncaught SyntaxError: Unexpected token ':'
if (a < 1000) {'Try again'}
'Try again'
if (a < 1000) {'Try again'} else {'Add more'}
'Try again'
a + 200
1185
if (a < 1000) {'Try again'} else {'Add more'}
'Try again'
a = a + 200
1185
if (a < 1000) {'Try again'} else {'Add more'}
'Add more'
a
1185
const a;
VM879:1 Uncaught SyntaxError: Missing initializer in const declaration
const a = 25;
VM912:1 Uncaught SyntaxError: Identifier 'a' has already been declared
const b = 25;
undefined
const b=25;
undefined
var b;
VM1035:1 Uncaught SyntaxError: Identifier 'b' has already been declared
    at <anonymous>:1:1
(anonymous) @ VM1035:1
b + b 
50
b = 2
VM1074:1 Uncaught TypeError: Assignment to constant variable.
    at <anonymous>:1:3
(anonymous) @ VM1074:1
'Can i get ${b} cars in the garage'
'Can i get ${b} cars in the garage'
alert(b)
undefined
`Can I get ${b} cars in the garage`
'Can I get 25 cars in the garage'
alert(`Can I get ${b} cars in the garage`)

undefined
Math.PI 
3.141592653589793
Math.PI * b
78.53981633974483
a + b
1210
Math.random(a)
0.7388020619341369
Math.floor(Math.random(a))
0
Math.random(a) + b
25.251824037373606
typeof a
'number'
const c = 'Quentin'
undefined
`${c} has ${b} cars at home`
'Quentin has 25 cars at home'
if (c) { true }
true
math.sqrt(a)
VM1884:1 Uncaught ReferenceError: math is not defined
    at <anonymous>:1:1
(anonymous) @ VM1884:1
Math.sqrt(a)
34.42382895611701
a = Math.sqrt(b)
5
a++
5
a = a++
6
const d = new Date();const d = new Date();
VM2032:1 Uncaught SyntaxError: Identifier 'd' has already been declared
d 
VM2077:1 Uncaught ReferenceError: d is not defined
    at <anonymous>:1:1
(anonymous) @ VM2077:1
const d = new Date();
undefined
d 
>>>>>>> Stashed changes
Mon Oct 04 2021 14:52:20 GMT-0400 (Eastern Daylight Time)